objects/IP_White_List__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IP White Lists</relationshipLabel>
        <relationshipName>IP_White_Lists</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FV_Vendor__c</fullName>
        <formula>Reference_IP_Component_from_ERP__r.FV_Vendor__c</formula>
        <label>FV Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Type__c</fullName>
        <formula>Reference_IP_Component_from_ERP__r.FV_IP_Type__c</formula>
        <label>IP Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_IP_Component_from_ERP__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Fields reference to.</description>
        <inlineHelpText>Fields reference to.</inlineHelpText>
        <label>Reference IP Component from ERP</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IP_Component_from_ERP__c.Enabled_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>IP Components that being disabled will not be shown.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IP_Component_from_ERP__c</referenceTo>
        <relationshipLabel>IP White Lists</relationshipLabel>
        <relationshipName>IP_White_Lists</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tech_Type__c</fullName>
        <formula>Reference_IP_Component_from_ERP__r.Tech_Type__c</formula>
        <label>Tech Type</label>
        <type>Text</type>
    </fields>
    <label>IP White List</label>
    <nameField>
        <displayFormat>IPWL-{0000}</displayFormat>
        <label>IP White List ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IP White Lists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>